// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<Radio
  defaultChecked={false}
  disabled={false}
  prefix="cat"
  value="A"
>
  <label
    className="cat-radio-wrapper"
  >
    <span
      className="cat-radio__inner-wrapper"
    >
      <span
        className="cat-radio__inner"
      />
      <input
        checked={false}
        className="cat-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="A"
      />
    </span>
    <span
      className="cat-radio__label"
    >
      radio
    </span>
  </label>
</Radio>
`;

exports[`Radio renders correctly 2`] = `
<Radio
  checked={true}
  defaultChecked={false}
  disabled={false}
  prefix="cat"
  value="A"
>
  <label
    className="cat-radio-wrapper"
  >
    <span
      className="cat-radio__inner-wrapper"
    >
      <span
        className="cat-radio__inner cat-radio__inner--checked"
      />
      <input
        checked={true}
        className="cat-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="A"
      />
    </span>
    <span
      className="cat-radio__label"
    >
      radio
    </span>
  </label>
</Radio>
`;

exports[`Radio.Group When Radio.group has null children, null should not be rendered 1`] = `
<RadioGroup
  defaultValue="A"
  disabled={false}
>
  <div
    className="cat-radio-group"
  >
    <Radio
      checked={true}
      defaultChecked={false}
      disabled={false}
      key=".0"
      onChange={[Function]}
      prefix="cat"
      value="A"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner cat-radio__inner--checked"
          />
          <input
            checked={true}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="A"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          A
        </span>
      </label>
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      disabled={false}
      key=".1"
      onChange={[Function]}
      prefix="cat"
      value="B"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner"
          />
          <input
            checked={false}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="B"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          B
        </span>
      </label>
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      disabled={false}
      key=".2"
      onChange={[Function]}
      prefix="cat"
      value="C"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner"
          />
          <input
            checked={false}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="C"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          C
        </span>
      </label>
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      disabled={false}
      key=".3"
      onChange={[Function]}
      prefix="cat"
      value="D"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner"
          />
          <input
            checked={false}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="D"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          D
        </span>
      </label>
    </Radio>
  </div>
</RadioGroup>
`;

exports[`Radio.Group renders correctly 1`] = `
<RadioGroup
  defaultValue="A"
  disabled={false}
>
  <div
    className="cat-radio-group"
  >
    <Radio
      checked={true}
      defaultChecked={false}
      disabled={false}
      key=".0"
      onChange={[Function]}
      prefix="cat"
      value="A"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner cat-radio__inner--checked"
          />
          <input
            checked={true}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="A"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          A
        </span>
      </label>
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      disabled={false}
      key=".1"
      onChange={[Function]}
      prefix="cat"
      value="B"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner"
          />
          <input
            checked={false}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="B"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          B
        </span>
      </label>
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      disabled={false}
      key=".2"
      onChange={[Function]}
      prefix="cat"
      value="C"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner"
          />
          <input
            checked={false}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="C"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          C
        </span>
      </label>
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      disabled={false}
      key=".3"
      onChange={[Function]}
      prefix="cat"
      value="D"
    >
      <label
        className="cat-radio-wrapper"
      >
        <span
          className="cat-radio__inner-wrapper"
        >
          <span
            className="cat-radio__inner"
          />
          <input
            checked={false}
            className="cat-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="D"
          />
        </span>
        <span
          className="cat-radio__label"
        >
          D
        </span>
      </label>
    </Radio>
  </div>
</RadioGroup>
`;
